[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/shop.gd" type="Script" id=1]


[node name="Area2D" type="Area2D"]
linear_damp = 0.0
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -140, -82, -50, -119, 142, -26, 133, 83, 48, 127, -135, 28, -139, -58 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -153, -84, -49, -134, 142, -35, 146, -3, 143, 88, 45, 141, -142, 33, -143, -45 )
[connection signal="area_shape_exited" from="." to="." method="_on_Area2D_area_shape_exited"]
[connection signal="body_shape_entered" from="." to="." method="_on_Area2D_body_shape_entered"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
